# netinfo

./: Cargo.toml
src/: devinfo.rs  lib.rs  main.rs
