[package]
name = "netinfo"
version = "0.1.0"
edition = "2021"

[dependencies.windows-sys]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices",
    "Win32_NetworkManagement_IpHelper",
]

[dependencies.windows]
    version = "0.51"
    features = [
        "Data_Xml_Dom",
        "Win32_Foundation",
        "Win32_Security",
        "Win32_System_Threading",
        "Win32_UI_WindowsAndMessaging",
        "Win32_Devices",
        "Win32_NetworkManagement_IpHelper"
        ]

[profile.dev]
    opt-level = 0  # Controls the --opt-level the compiler builds with
    debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
